HTML - rozdeleni do 4 sekci + natextovani + obrazky

--- a/index.html
+++ b/index.html
@@ -10,11 +10,46 @@
         <div class="obal">
 
             <!-- tvoje HTML sem -->
+            
+            <ul class="horni lista">
+            <li><a href="#">SUPER APPKA</a></li>
+            <li><a href="#">ÚžasnÝ design</a></li>
+            <li><a href="#">Boží funkce</a></li>
+            <li><a href="#">Zdarma ke stažení</a></li>
+        </ul>
 
-            Ajajaj, tento týden tu nic není, je to zcela na tobě :)
+            <div class="Super Appka"></div>
+            <h1>Super Appka</h1>
+            <p>Úžasná mobilní aplikace která ti změní život.</p>
 
-            Zadání ve vysledek.png
+            <div class="Stáhnout zdarma">
+                <a class="tlacitko" href="#">Stáhnout Zdarma</a>
+            </div>
 
+            <div class="Více informací">
+                <a class="tlacitko" href="#">Více informací</a>
+            </div>
+
+        <div class="Tri sloupce">
+            <div class="Cestuj po světe">
+                <img src="images/letadlo.svg" alt="letadlo" width="75" height="34">
+            <h2>Cestuj po světe</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque, reiciendis ipsa! Porro amet corrupti voluptates, ut culpa impedit laborum laudantium est consequatur quas nam! Ipsum qui dolorum modi aliquid eos.</p>
+            </div>
+            <div class="Chatuj s prateli">
+                <img src="images/bubliny.svg" alt="chatování" width="75" height="34">
+                <h2>Chatuj s přáteli</h2>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque, reiciendis ipsa! Porro amet corrupti voluptates, ut culpa impedit laborum laudantium est consequatur quas nam! Ipsum qui dolorum modi aliquid eos.</p>
+            </div>
+            <div class="Zazij dobrodruzstvi">
+                <img src="images/mapa.svg" alt="mapa" width="75" height="34">
+                <h2>Zažij dobrodružství</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, ad in? Amet odio optio ipsum veniam nostrum excepturi nobis. Ipsa repellendus assumenda asperiores minus quibusdam incidunt ipsam aspernatur blanditiis deleniti.</p>
+            </div>
+        <div class="paticka">@2016 Web od A do Z</div>
+
+
+        </div>
 
 
 
