--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             
             <ul class="horni lista">
             <li><a href="#">SUPER APPKA</a></li>
-            <li><a href="#">ÚžasnÝ design</a></li>
+            <li><a href="#">Úžasný design</a></li>
             <li><a href="#">Boží funkce</a></li>
             <li><a href="#">Zdarma ke stažení</a></li>
         </ul>
