--- a/index.html
+++ b/index.html
@@ -18,17 +18,20 @@
             <li><a href="#">Zdarma ke stažení</a></li>
         </ul>
 
-            <div class="Super Appka"></div>
+            <div class="Super Appka">
             <h1>Super Appka</h1>
+            <img class="foto ruka" src="images/telefon.png" alt="telefon">
             <p>Úžasná mobilní aplikace která ti změní život.</p>
-
-            <div class="Stáhnout zdarma">
+    
+            <div class="Stahnout zdarma">
                 <a class="tlacitko" href="#">Stáhnout Zdarma</a>
             </div>
 
-            <div class="Více informací">
+            <div class="Vice informaci">
                 <a class="tlacitko" href="#">Více informací</a>
             </div>
+        </div>
+
 
         <div class="Tri sloupce">
             <div class="Cestuj po světe">
