--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
                 <h2>Zažij dobrodružství</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, ad in? Amet odio optio ipsum veniam nostrum excepturi nobis. Ipsa repellendus assumenda asperiores minus quibusdam incidunt ipsam aspernatur blanditiis deleniti.</p>
             </div>
+        </div>
+
         <div class="paticka">@2016 Web od A do Z</div>
 
 
