button Vic informaci (odbarveni) + barva h2

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Mobilní aplikace</title>
         <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="style.css">
+        <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500&display=swap" rel="stylesheet">
     </head>
     <body>
         <div class="obal">
@@ -21,7 +22,7 @@
             <div class="Super Appka">
             <h1>Super Appka</h1>
             <img class="foto ruka" src="images/telefon.png" alt="telefon">
-            <p>Úžasná mobilní aplikace která ti změní život.</p>
+            <div class="text o app">Úžasná mobilní aplikace která ti změní život.</div>
     
             <div class="Stahnout zdarma">
                 <a class="tlacitko" href="#">Stáhnout Zdarma</a>
@@ -34,20 +35,20 @@
 
 
         <div class="Tri sloupce">
-            <div class="Cestuj po světe">
-                <img src="images/letadlo.svg" alt="letadlo" width="75" height="34">
+            <div class="Cestuj">
+                <img src="images/letadlo.svg" alt="letadlo" width="95" height="54">
             <h2>Cestuj po světe</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque, reiciendis ipsa! Porro amet corrupti voluptates, ut culpa impedit laborum laudantium est consequatur quas nam! Ipsum qui dolorum modi aliquid eos.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam suscipit dolorum assumenda magnam labore rerum nisi quia placeat. Nisi eaque ullam nostrum quasi vero dolor quisquam maxime molestias earum amet.</p>
             </div>
-            <div class="Chatuj s prateli">
-                <img src="images/bubliny.svg" alt="chatování" width="75" height="34">
+            <div class="Chatuj">
+                <img src="images/bubliny.svg" alt="chatování" width="95" height="54">
                 <h2>Chatuj s přáteli</h2>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque, reiciendis ipsa! Porro amet corrupti voluptates, ut culpa impedit laborum laudantium est consequatur quas nam! Ipsum qui dolorum modi aliquid eos.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam suscipit dolorum assumenda magnam labore rerum nisi quia placeat. Nisi eaque ullam nostrum quasi vero dolor quisquam maxime molestias earum amet.</p>
             </div>
-            <div class="Zazij dobrodruzstvi">
-                <img src="images/mapa.svg" alt="mapa" width="75" height="34">
+            <div class="Zazij">
+                <img src="images/mapa.svg" alt="mapa" width="95" height="54">
                 <h2>Zažij dobrodružství</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, ad in? Amet odio optio ipsum veniam nostrum excepturi nobis. Ipsa repellendus assumenda asperiores minus quibusdam incidunt ipsam aspernatur blanditiis deleniti.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam suscipit dolorum assumenda magnam labore rerum nisi quia placeat. Nisi eaque ullam nostrum quasi vero dolor quisquam maxime molestias earum amet.</p>
             </div>
         </div>
 
