--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </div>
         </div>
 
-        <div class="paticka">@2016 Web od A do Z</div>
+        <div class="paticka">@2016, Web od A do Z</div>
 
 
         </div>
