--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="Super Appka">
             <h1>Super Appka</h1>
             <img class="foto ruka" src="images/telefon.png" alt="telefon">
-            <div class="text o app">Úžasná mobilní aplikace která ti změní život.</div>
+            <div class="text o app">Úžasná mobilní aplikace, která ti změní život.</div>
     
             <div class="Stahnout zdarma">
                 <a class="tlacitko" href="#">Stáhnout Zdarma</a>
